--- a/portfolio.html
+++ b/portfolio.html
@@ -25,19 +25,19 @@
         <section class="filters">
             <ul>
                 <li>
-                    <p>Все</p>
+                    <button type="button">Все</button>
                 </li>
                 <li>
-                    <p>Веб-сайты</p>
+                    <button type="button">Веб-сайты</button>
                 </li>
                 <li>
-                    <p>Приложения</p>
+                    <button type="button">Приложения</button>
                 </li>
                 <li>
-                    <p>Дизайн</p>
+                    <button type="button">Дизайн</button>
                 </li>
                 <li>
-                    <p>Маркетинг</p>
+                    <button type="">Маркетинг</button>
                 </li>
             </ul>
         </section>
