--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,8 @@
         <nav>
             <a href="">WebStudio</a>
             <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
+                <li><a href="/goit-markup-hw-02/index.html">Студия</a></li>
+                <li><a href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
