--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <a href="">WebStudio</a>
-            <ul>
+            <ul class="list">
                 <li><a href="/goit-markup-hw-02/index.html">Студия</a></li>
                 <li><a href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -27,7 +27,7 @@
             <button type="button">Заказать услугу</button>
         </section>
         <section>
-            <ul>
+            <ul class="list">
                 <li>
                     <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
@@ -48,7 +48,7 @@
         </section>
         <section>
             <h2>Чем мы занимаемся</h2>
-            <ul>
+            <ul class="list">
                 <li><img src="./images/about-img-1.jpg" alt="человек печатает" width="370" height="294" />
                 </li>
                 <li><img src="./images/about-img-2.jpg" alt="человек смотрит в телефон" width="370" height="294" />
@@ -59,7 +59,7 @@
         </section>
         <section class="team">
             <h2>Наша команда</h2>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/team-img-1.jpg" alt="лицо человека" width="270" height="260" />
                     <p>Игорь Демьяненко</p>
