--- a/portfolio.html
+++ b/portfolio.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <nav>
             <a href="">WebStudio</a>
-            <ul>
+            <ul class="list">
                 <li><a href="/goit-markup-hw-02/index.html">Студия</a></li>
                 <li><a href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
@@ -23,7 +27,7 @@
     </header>
     <main>
         <section class="filters">
-            <ul>
+            <ul class="list">
                 <li>
                     <button type="button">Все</button>
                 </li>
@@ -43,51 +47,53 @@
         </section>
 
         <section class="projects">
-            <div class="project1">
-                <img src="./images/project1.jpg" alt="" width="370" height="294">
-                <p>Технокряк</p>
-                <p>Веб-сайт</p>
-            </div>
-            <div class="project2">
-                <img src="./images/project2.jpg" alt="" width="370" height="294">
-                <p>Постер New Orlean vs Golden Star</p>
-                <p>Дизайн</p>
-            </div>
-            <div class="project3">
-                <img src="./images/project3.jpg" alt="" width="370" height="294">
-                <p>Ресторан Seafood</p>
-                <p>Приложение</p>
-            </div>
-            <div class="project4">
-                <img src="./images/project4.jpg" alt="" width="370" height="294">
-                <p>Проект Prime</p>
-                <p>Маркетинг</p>
-            </div>
-            <div class="project5">
-                <img src="./images/project5.jpg" alt="" width="370" height="294">
-                <p>Проект Boxes</p>
-                <p>Приложение</p>
-            </div>
-            <div class="project6">
-                <img src="./images/project6.jpg" alt="" width="370" height="294">
-                <p>Inspiration has no Borders</p>
-                <p>Веб-сайт</p>
-            </div>
-            <div class="project7">
-                <img src="./images/project7.jpg" alt="" width="370" height="294">
-                <p>Издание Limited Edition</p>
-                <p>Дизайн</p>
-            </div>
-            <div class="project8">
-                <img src="./images/project8.jpg" alt="" width="370" height="294">
-                <p>Проект LAB</p>
-                <p>Маркетинг</p>
-            </div>
-            <div class="project9">
-                <img src="./images/project9.jpg" alt="" width="370" height="294">
-                <p>Growing Business</p>
-                <p>Приложение</p>
-            </div>
+            <ul class="list">
+                <li>
+                    <img src="./images/project1.jpg" alt="" width="370" height="294">
+                    <p>Технокряк</p>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/project2.jpg" alt="" width="370" height="294">
+                    <p>Постер New Orlean vs Golden Star</p>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/project3.jpg" alt="" width="370" height="294">
+                    <p>Ресторан Seafood</p>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/project4.jpg" alt="" width="370" height="294">
+                    <p>Проект Prime</p>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/project5.jpg" alt="" width="370" height="294">
+                    <p>Проект Boxes</p>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/project6.jpg" alt="" width="370" height="294">
+                    <p>Inspiration has no Borders</p>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/project7.jpg" alt="" width="370" height="294">
+                    <p>Издание Limited Edition</p>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/project8.jpg" alt="" width="370" height="294">
+                    <p>Проект LAB</p>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/project9.jpg" alt="" width="370" height="294">
+                    <p>Growing Business</p>
+                    <p>Приложение</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
