--- a/index.html
+++ b/index.html
@@ -9,86 +9,86 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul class="list">
-                <li><a href="/goit-markup-hw-02/index.html">Студия</a></li>
-                <li><a href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="header-nav">
+            <a class="link logo-link" href="">WebStudio</a>
+            <ul class="list header-list">
+                <li><a class="link header-link" href="/goit-markup-hw-02/index.html">Студия</a></li>
+                <li><a class="link header-link" href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
+                <li><a class="link header-link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <section class="hero">
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+            <h1 class="hero title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="button hero">Заказать услугу</button>
         </section>
-        <section>
-            <ul class="list">
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+        <section class="about">
+            <ul class="list about-list">
+                <li class="about item">
+                    <h3 class="about title">Внимание к деталям</h3>
+                    <p class="about after-title">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="about item">
+                    <h3 class="about title">Пунктуальность</h3>
+                    <p class="about after-title">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="about item">
+                    <h3 class="about title">Планирование</h3>
+                    <p class="about after-title">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="about item">
+                    <h3 class="about title">Современные технологии</h3>
+                    <p class="about after-title">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul class="list">
-                <li><img src="./images/about-img-1.jpg" alt="человек печатает" width="370" height="294" />
+        <section class="work">
+            <h2 class="section title">Чем мы занимаемся</h2>
+            <ul class="list work-list">
+                <li class="work-list item"><img src="./images/about-img-1.jpg" alt="человек печатает" width="370" height="294" />
                 </li>
-                <li><img src="./images/about-img-2.jpg" alt="человек смотрит в телефон" width="370" height="294" />
+                <li class="work-list item"><img src="./images/about-img-2.jpg" alt="человек смотрит в телефон" width="370" height="294" />
                 </li>
-                <li><img src="./images/about-img-3.jpg" alt="человек смотрит в планшет" width="370" height="294" />
+                <li class="work-list item"><img src="./images/about-img-3.jpg" alt="человек смотрит в планшет" width="370" height="294" />
                 </li>
             </ul>
         </section>
         <section class="team">
-            <h2>Наша команда</h2>
-            <ul class="list">
-                <li>
+            <h2 class="section  title">Наша команда</h2>
+            <ul class="list team-list">
+                <li class="team-list item">
                     <img src="./images/team-img-1.jpg" alt="лицо человека" width="270" height="260" />
-                    <p>Игорь Демьяненко</p>
-                    <p>Product Designer</p>
+                    <p class="team title">Игорь Демьяненко</p>
+                    <p class="team after-title">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-list item">
                     <img src="./images/team-img-2.jpg" alt="лицо человека" width="270" height="260" />
-                    <p>Ольга Репина</p>
-                    <p>Frontend Developer</p>
+                    <p class="team title">Ольга Репина</p>
+                    <p class="team after-title">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-list item">
                     <img src="./images/team-img-3.jpg" alt="лицо человека" width="270" height="260" />
-                    <p>Николай Тарасов</p>
-                    <p>Marketing</p>
+                    <p class="team title">Николай Тарасов</p>
+                    <p class="team after-title">Marketing</p>
                 </li>
-                <li>
+                <li class="team-list item">
                     <img src="./images/team-img-4.jpg" alt="лицо человека" width="270" height="260" />
-                    <p>Михаил Ермаков</p>
-                    <p>UI Designer</p>
+                    <p class="team title">Михаил Ермаков</p>
+                    <p class="team after-title">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a class="link logo-link" href="">WebStudio</a>
         <adress>
-            <a href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
+            <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </adress>
     </footer>
 </body>
