--- a/portfolio.html
+++ b/portfolio.html
@@ -13,95 +13,95 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <a href="">WebStudio</a>
-            <ul class="list">
-                <li><a href="/goit-markup-hw-02/index.html">Студия</a></li>
-                <li><a href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+    <header class="header">
+        <nav class="header-nav">
+            <a class="link logo-link" href="">WebStudio</a>
+            <ul class="list header-list">
+                <li><a class="link header-link" href="/goit-markup-hw-02/index.html">Студия</a></li>
+                <li><a class="link header-link" href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
+                <li><a class="link header-link" href="">Контакты</a></li>
             </ul>
         </nav>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <section class="filters">
-            <ul class="list">
+            <ul class="list filters-list">
                 <li>
-                    <button type="button">Все</button>
+                    <button type="button" class="filters-btn">Все</button>
                 </li>
                 <li>
-                    <button type="button">Веб-сайты</button>
+                    <button type="button" class="filters-btn">Веб-сайты</button>
                 </li>
                 <li>
-                    <button type="button">Приложения</button>
+                    <button type="button" class="filters-btn">Приложения</button>
                 </li>
                 <li>
-                    <button type="button">Дизайн</button>
+                    <button type="button" class="filters-btn">Дизайн</button>
                 </li>
                 <li>
-                    <button type="">Маркетинг</button>
+                    <button type="button" class="filters-btn">Маркетинг</button>
                 </li>
             </ul>
         </section>
 
         <section class="projects">
-            <ul class="list">
-                <li>
+            <ul class="list projects-list">
+                <li class="projects-item">
                     <img src="./images/project1.jpg" alt="" width="370" height="294">
-                    <p>Технокряк</p>
-                    <p>Веб-сайт</p>
+                    <p class="projects-title">Технокряк</p>
+                    <p class="projects-after-title">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project2.jpg" alt="" width="370" height="294">
-                    <p>Постер New Orlean vs Golden Star</p>
-                    <p>Дизайн</p>
+                    <p class="projects-title">Постер New Orlean vs Golden Star</p>
+                    <p class="projects-after-title">Дизайн</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project3.jpg" alt="" width="370" height="294">
-                    <p>Ресторан Seafood</p>
-                    <p>Приложение</p>
+                    <p class="projects-title">Ресторан Seafood</p>
+                    <p class="projects-after-title">Приложение</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project4.jpg" alt="" width="370" height="294">
-                    <p>Проект Prime</p>
-                    <p>Маркетинг</p>
+                    <p class="projects-title">Проект Prime</p>
+                    <p class="projects-after-title">Маркетинг</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project5.jpg" alt="" width="370" height="294">
-                    <p>Проект Boxes</p>
-                    <p>Приложение</p>
+                    <p class="projects-title">Проект Boxes</p>
+                    <p class="projects-after-title">Приложение</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project6.jpg" alt="" width="370" height="294">
-                    <p>Inspiration has no Borders</p>
-                    <p>Веб-сайт</p>
+                    <p class="projects-title">Inspiration has no Borders</p>
+                    <p class="projects-after-title">Веб-сайт</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project7.jpg" alt="" width="370" height="294">
-                    <p>Издание Limited Edition</p>
-                    <p>Дизайн</p>
+                    <p class="projects-title">Издание Limited Edition</p>
+                    <p class="projects-after-title">Дизайн</p>
                 </li>
-                <li>
+                <li class="projects-item">
                     <img src="./images/project8.jpg" alt="" width="370" height="294">
-                    <p>Проект LAB</p>
-                    <p>Маркетинг</p>
+                    <p class="projects-title">Проект LAB</p>
+                    <p class="projects-after-title">Маркетинг</p>
                 </li>
-                <li>
+                <li clas="projects-item">
                     <img src="./images/project9.jpg" alt="" width="370" height="294">
-                    <p>Growing Business</p>
-                    <p>Приложение</p>
+                    <p class="projects-title">Growing Business</p>
+                    <p class="projects-after-title">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
+        <a class="link logo-link" href="">WebStudio</a>
         <adress>
-            <a href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="link map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
+            <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
         </adress>
     </footer>
 </body>
