--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1 class="hero title">Эффективные решения для вашего бизнеса</h1>
+            <h1 class="hero text">Эффективные решения для вашего бизнеса</h1>
             <button type="button" class="button hero">Заказать услугу</button>
         </section>
         <section class="about">
@@ -61,22 +61,22 @@
             <h2 class="section  title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="team-list item">
-                    <img src="./images/team-img-1.jpg" alt="лицо человека" width="270" height="260" />
+                    <img class="team item-photo" src="./images/team-img-1.jpg" alt="лицо человека" width="270" height="260" />
                     <p class="team title">Игорь Демьяненко</p>
                     <p class="team after-title">Product Designer</p>
                 </li>
                 <li class="team-list item">
-                    <img src="./images/team-img-2.jpg" alt="лицо человека" width="270" height="260" />
+                    <img class="team item-photo" src="./images/team-img-2.jpg" alt="лицо человека" width="270" height="260" />
                     <p class="team title">Ольга Репина</p>
                     <p class="team after-title">Frontend Developer</p>
                 </li>
                 <li class="team-list item">
-                    <img src="./images/team-img-3.jpg" alt="лицо человека" width="270" height="260" />
+                    <img class="team item-photo" src="./images/team-img-3.jpg" alt="лицо человека" width="270" height="260" />
                     <p class="team title">Николай Тарасов</p>
                     <p class="team after-title">Marketing</p>
                 </li>
                 <li class="team-list item">
-                    <img src="./images/team-img-4.jpg" alt="лицо человека" width="270" height="260" />
+                    <img class="team item-photo" src="./images/team-img-4.jpg" alt="лицо человека" width="270" height="260" />
                     <p class="team title">Михаил Ермаков</p>
                     <p class="team after-title">UI Designer</p>
                 </li>
