--- a/portfolio.html
+++ b/portfolio.html
@@ -13,17 +13,21 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="header-nav">
-            <a class="link logo-link" href="">WebStudio</a>
-            <ul class="list header-list">
-                <li><a class="link header-link" href="/goit-markup-hw-02/index.html">Студия</a></li>
-                <li><a class="link header-link" href="/goit-markup-hw-02/portfolio.html">Портфолио</a></li>
-                <li><a class="link header-link" href="">Контакты</a></li>
+    <header>
+        <a href="#">
+            <span class="logo web">Web</span>
+            <span class="logo">Studio</span>
+
+        </a>
+        <nav>
+            <ul>
+                <li><a class="link nav-list" href="./index.html">Студия</a></li>
+                <li><a class="link nav-list" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link nav-list" href="">Контакты</a></li>
             </ul>
         </nav>
-        <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        <a class="nav-list-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="nav-list-address" href="tel:+380961111111">+38 096 111 11 11</a>
     </header>
     <main>
         <section class="filters">
@@ -49,47 +53,47 @@
         <section class="projects">
             <ul class="list projects-list">
                 <li class="projects-item">
-                    <img src="./images/project1.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project1.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Технокряк</p>
                     <p class="projects-after-title">Веб-сайт</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project2.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project2.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Постер New Orlean vs Golden Star</p>
                     <p class="projects-after-title">Дизайн</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project3.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project3.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Ресторан Seafood</p>
                     <p class="projects-after-title">Приложение</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project4.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project4.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Проект Prime</p>
                     <p class="projects-after-title">Маркетинг</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project5.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project5.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Проект Boxes</p>
                     <p class="projects-after-title">Приложение</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project6.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project6.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Inspiration has no Borders</p>
                     <p class="projects-after-title">Веб-сайт</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project7.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project7.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Издание Limited Edition</p>
                     <p class="projects-after-title">Дизайн</p>
                 </li>
                 <li class="projects-item">
-                    <img src="./images/project8.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project8.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Проект LAB</p>
                     <p class="projects-after-title">Маркетинг</p>
                 </li>
                 <li clas="projects-item">
-                    <img src="./images/project9.jpg" alt="" width="370" height="294">
+                    <img class="projects-photo" src="./images/project9.jpg" alt="" width="370" height="294">
                     <p class="projects-title">Growing Business</p>
                     <p class="projects-after-title">Приложение</p>
                 </li>
@@ -97,11 +101,13 @@
         </section>
     </main>
     <footer>
-        <a class="link logo-link" href="">WebStudio</a>
-        <adress>
-            <a class="link map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
-            <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a>
-        </adress>
+        <a href="#">
+            <span class="logo web">Web</span>
+            <span class="logo">Studio</span>
+            <adress>
+                <a class="link map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
+                <a class="nav-list-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="nav-list-address" href="tel:+380961111111">+38 096 111 11 11</a>
+            </adress>
     </footer>
 </body>
