--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
     <footer>
         <a href="#">
             <span class="logo web">Web</span>
-            <span class="logo">Studio</span>
+            <span class="logo-footer">Studio</span>
             <adress>
                 <a class="link map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
                 <a class="nav-list-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
