--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -92,7 +94,7 @@
     <footer>
         <a href="#">
             <span class="logo web">Web</span>
-            <span class="logo">Studio</span>
+            <span class="logo-footer">Studio</span>
             <adress>
                 <a class="link-map" href="https://goo.gl/maps/p6JjYPCPPx8Hk2Xr9" target="_blank" rel="noopener noreferre">r. Киев, пр-т Леси Украинки, 26</a>
                 <a class="nav-list-address" href="mailto:info@devstudio.com">info@devstudio.com</a>
